<resources>
    <string name="app_name">MakanYuk</string>
    <string name="makanyuk">MakanYuk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone Number</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="home_address">Home Address</string>
    <string name="type_your_home_address">Type your home address</string>
    <string name="house_number">House Number</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="type_your_city">Type your city</string>
    <string name="register_now">Register Now</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_new_account">Register New Account</string>
    <string name="yeay_completed">Yeay! Completed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profile</string>
    <string name="email_validation">Email must be filled</string>
    <string name="password_validation">Password must be filled</string>
    <string name="password_length">Password must contain 8 character</string>
    <string name="name_validation">Name must be filled</string>
    <string name="email_valid">Email is not valid</string>
    <string name="city">City</string>
    <string name="new_taste">New Taste</string>
    <string name="popular">Popular</string>
    <string name="recommended">Recommended</string>
    <string name="ingredients">Ingredients:</string>
    <string name="total_price">Total Price:</string>
    <string name="order_now">Order Now</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="details_transaction">Details Transaction</string>
    <string name="driver">Driver</string>
    <string name="tax_10">Tax 10%</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="checkout_now">Checkout Now</string>
</resources>