<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="26dp"
    tools:context=".ui.auth.signin.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextView.PoppinsNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_email_address"
        style="@style/TextView.PoppinsNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_button"
        android:hint="@string/type_your_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/TextView.PoppinsNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_password"
        style="@style/TextView.PoppinsNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_button"
        android:hint="@string/type_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow_dark"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:text="@string/register_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="8dp" />


</LinearLayout>