<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="26dp"
        tools:context=".ui.auth.signup.SignUpFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_phone_number"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/home_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_address"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_home_address"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/house_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_house_number"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_house_number"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/house_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_city"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_city"
            android:importantForAutofill="no"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/yellow_dark"
            android:fontFamily="@font/poppins"
            android:padding="12dp"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>