<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="26dp"
        tools:context=".ui.auth.signup.SignUpFragment">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/add_photo" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/full_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_full_name"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_full_name"
            android:inputType="text" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_email_address"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_email_address"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/TextView.PoppinsNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/TextView.PoppinsNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button"
            android:hint="@string/type_your_password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/yellow_dark"
            android:fontFamily="@font/poppins"
            android:padding="12dp"
            android:text="@string/continue"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>