<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".ui.detail.PaymentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/bg_gray"
        tools:context=".ui.detail.PaymentFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_ordered"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/constraintLayout" />

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/fried_rice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/iv_picture"
                app:layout_constraintTop_toTopOf="@+id/iv_picture"
                tools:text="Nasi Goreng" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextView.PoppinsLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/iv_picture"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="IDR 123.456" />

            <TextView
                android:id="@+id/tv_count"
                style="@style/TextView.PoppinsLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title"
                tools:text="14 items" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/details_transaction"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/iv_picture" />

            <TextView
                android:id="@+id/tv_item_title"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:text="Nasi Goreng" />

            <TextView
                android:id="@+id/tv_item_price"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_title"
                tools:text="IDR 123.456" />

            <TextView
                android:id="@+id/tv_item_driver"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/driver"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/tv_item_title" />

            <TextView
                android:id="@+id/tv_item_driver_price"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_driver"
                tools:text="IDR 10.000" />

            <TextView
                android:id="@+id/tv_item_tax"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tax_10"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/tv_item_driver" />

            <TextView
                android:id="@+id/tv_item_tax_price"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_tax"
                tools:text="IDR 20.000" />

            <TextView
                android:id="@+id/tv_item_total"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/total_price"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@id/tv_item_tax" />

            <TextView
                android:id="@+id/tv_item_total_price"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textColor="@color/green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_total"
                tools:text="IDR 123.456" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textView3"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliver_to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/full_name"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="Alexa" />

            <TextView
                android:id="@+id/textView5"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/phone_number"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/tv_item_phone_no"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                tools:text="081215478273" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/home_address"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <TextView
                android:id="@+id/tv_item_address"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                tools:text="Jl Medoho 1" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/house_number"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView6" />

            <TextView
                android:id="@+id/tv_item_house_no"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                tools:text="32 A" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/city"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView7" />

            <TextView
                android:id="@+id/tv_item_city"
                style="@style/TextView.PoppinsNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                tools:text="Semarang" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkout_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/yellow_dark"
            android:fontFamily="@font/poppins"
            android:padding="12dp"
            android:text="@string/checkout_now"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>